--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="card"><img src="./img/IMG_10.PNG" alt=""></div>
     </div>
     <footer class="flex">
-        <img class="button" src="./img/iconball.webp" alt="">
+        <img class="button" onclick="listRandom();" src="./img/iconball.webp" alt="">
     </footer>
 </body>
 
