--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/code.js"></script>
+    <script src="../poke-horario/js/code.js"></script>
     <link rel="shortcut icon" href="./img/iconball.webp" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,7 +31,7 @@
         <div class="card"><img src="./img/IMG_10.PNG" alt=""></div>
     </div>
     <footer class="flex">
-        <img class="button" onclick="listRandom();" src="./img/iconball.webp" alt="">
+        <img class="button" id="pokeball" src="./img/iconball.webp" onclick="getListRandom();">
     </footer>
 </body>
 
