--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="flex">
-        <h1>¡Buenos dias!</h1>
+        <h1 id="h1">¡Buenos dias!</h1>
     </header>
     <div class="scrollmenu">
         <div class="card"><img src="./img/IMG_1.PNG" alt=""></div>
@@ -31,7 +31,7 @@
         <div class="card"><img src="./img/IMG_10.PNG" alt=""></div>
     </div>
     <footer class="flex">
-        <img class="button" id="pokeball" src="./img/iconball.webp" onclick="getListRandom();">
+        <img class="button" id="pokeball" src="./img/iconball.webp" onclick="ListRandom();">
     </footer>
 </body>
 
